improved style that fixes some issues on mobile

--- a/src/style/_whicon.styl
+++ b/src/style/_whicon.styl
@@ -1,29 +1,35 @@
-header.docked
-  cursor                        move
-  float                         left
-  width                         480px
+body.desktop
+  background-attachment fixed
+  background-image      url("dotmatrix_background.jpg")
+  background-size       cover
+  background-position   left
 
-nav.docked
-  position                      absolute
-  right                         1em
-  width                         0
-  height                        100%
-  
-  ul
-    align-content               flex-start
-    display                     flex
-    flex-direction              column
-    flex-wrap                   wrap-reverse
-    float                       right
-    margin                      0
-    height                      100%
+  header
+    cursor                        move
+    float                         left
+    width                         480px
 
-footer.docked
-  position                      absolute
-  text-align                    left
-  bottom                        1em
-  left                          1em
-  height                        160px
+  nav
+    position                      absolute
+    right                         1em
+    width                         0
+    height                        100%
+
+    ul
+      align-content               flex-start
+      display                     flex
+      flex-direction              column
+      flex-wrap                   wrap-reverse
+      float                       right
+      margin                      0
+      height                      100%
+
+  footer
+    position                      absolute
+    text-align                    left
+    bottom                        1em
+    left                          1em
+    height                        160px
 
 [am-icon]
   display                       inline-block
