--- a/src/style/_whimdow.styl
+++ b/src/style/_whimdow.styl
@@ -24,7 +24,7 @@ x-whimdow
     background-repeat           repeat-x
     background-size             auto, cover
     cursor                      move
-    font-size                   1.4em
+    font-size                   1.3em
     position                    absolute
     text-align                  center
     
@@ -37,6 +37,7 @@ x-whimdow
       display                   inline-block
       font-weight               bold
       overflow                  hidden
+      text-decoration           none
       text-overflow             ellipsis
       margin                    0
       width                     calc( 100% - 96px )
