--- a/src/style/style.styl
+++ b/src/style/style.styl
@@ -3,11 +3,8 @@ page_width = 1024px
 @import "_reset"
 
 html
-  background-attachment fixed
   background-color      #999
-  background-image      url("dotmatrix_background.jpg")
-  background-size       cover
-  background-position   left
+  background-image      url("raw_paper_texture.png")
   color                 #666
   font-family           "Waiting for the Sunrise", cursive
   letter-spacing        .1em
@@ -52,10 +49,10 @@ h1, h2, p, ul, ol, table, aside
 
 h2
   font-size             1.2em
+  text-decoration       underline
 
 strong
   font-weight           bold
-  text-decoration       underline
 
 li
   margin-left           2em
